@@ -11,6 +11,10 @@ Fri, 14 Jul 2006 21:07:56 +0200 <thp@perli.net>
 	* gPodderChannelReader now accepts an optional callback
 	  parameter for download status indication (see above)
 	* Fixed multiple selection for downloaded item info box
+	* Added direct download button to episode info when 
+	  opened from "available podcasts" tab; now you can 
+	  double-click, read description, download if you like 
+	  or dismiss the dialog; should speed things up for ya!
 
 Fri, 07 Jul 2006 14:21:59 +0200 <thp@perli.net>
 	* Added workarounds to libopmlreader to support 
